[gd_scene load_steps=9 format=3 uid="uid://ubghcpabuo1"]

[ext_resource type="Script" path="res://script/snake.gd" id="1_1y70h"]
[ext_resource type="Texture2D" uid="uid://bb77tm6myevic" path="res://asset/head.png" id="1_70ums"]
[ext_resource type="PackedScene" uid="uid://ccssm4g806sd7" path="res://scene/tail_segment.tscn" id="2_httmn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s1f3j"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qwwvl"]
radius = 22.19

[sub_resource type="Curve" id="Curve_d645g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.021978), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_y5twt"]
curve = SubResource("Curve_d645g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h6mmp"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 1.0
spread = 116.031
flatness = 0.73
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_max = 10.0
scale_curve = SubResource("CurveTexture_y5twt")
color = Color(0.36, 1, 0.36, 1)

[node name="snake" type="RigidBody2D" groups=["snake"]]
collision_mask = 3
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_1y70h")
tail_scene = ExtResource("2_httmn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_70ums")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s1f3j")

[node name="healthLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = -35.0
offset_right = 19.0
offset_bottom = -12.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="tailContainer" type="Node2D" parent="."]
position = Vector2(0, 15)

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource("CircleShape2D_qwwvl")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -23)
rotation = 1.5708
emitting = false
amount = 50
amount_ratio = 0.975
process_material = SubResource("ParticleProcessMaterial_h6mmp")
lifetime = 0.7
speed_scale = 0.84
explosiveness = 1.0
randomness = 0.7
fixed_fps = 0
collision_base_size = 0.0
draw_order = 0
trail_sections = 4

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_touch_screen_button_released"]
